--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "react-components",
+  "name": "@zoemeriet/react-components",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "build": "vite build && tsc"
   },
   "author": "",
@@ -17,5 +22,8 @@
   },
   "peerDependencies": {
     "react": "^18.2.0"
+  },
+  "publishConfig": {
+    "@zoemeriet:registry": "https://npm.pkg.github.com"
   }
 }
