--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zoemeriet/react-components",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
@@ -33,7 +33,8 @@
     "storybook": "^7.6.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2",
-    "vite": "^5.0.5"
+    "vite": "^5.0.5",
+    "vite-plugin-lib-inject-css": "^1.3.0"
   },
   "peerDependencies": {
     "react": "^18.2.0"
