--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@storybook/test": "^7.6.3",
     "@types/react": "^18.2.42",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.6.3",
     "tailwindcss": "^3.3.6",
